--- a/register.html
+++ b/register.html
@@ -139,6 +139,8 @@
 
 </body>
 
+
+<!-- 
 <script>
     //show sidebar function
     function showSidebar() {
@@ -169,6 +171,6 @@
     });
 
 
-</script>
+</script> -->
 
 </html>
