--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
             <li><a href="#"> Account </a>
                 <ul class="drop">
-                    <li><a href="#"> Login </a></li>
-                    <li><a href="#"> Register </a></li>
+                    <li><a href="#sign.html"> Login </a></li>
+                    <li><a href="#register.html"> Register </a></li>
                 </ul>
             </li>
 
@@ -53,8 +53,8 @@
 
             <li class="hideOnMobile" id="account_button"><a href="#"> Account</a>
                 <ul class="drop" style="display: none;" id="account_entities">
-                    <li><a href="#"> Login </a></li>
-                    <li><a href="#"> Register </a></li>
+                    <li><a href="#sign.html"> Login </a></li>
+                    <li><a href="#register.html"> Register </a></li>
 
                 </ul>
             </li>
